# yolox_trt

./: README.md
example/: yolox_trt_example.cpp
include/yolox_cpp/: coco_names.hpp  core.hpp  tensorrt_logging.h  utils.hpp  yolox_tensorrt.hpp
src/: yolox_tensorrt.cpp
yolox_trt/: CMakeLists.txt  package.xml
yolox_trt/example/: yolox_trt_example.cpp
yolox_trt/include/yolox_trt/: coco_names.hpp  core.hpp  tensorrt_logging.h  utils.hpp  yolox_tensorrt.hpp
yolox_trt/src/: yolox_tensorrt.cpp
yolox_trt_plugin/: CMakeLists.txt  README.md  package.xml  yolox_trt_plugin.xml
yolox_trt_plugin/include/yolox_trt_plugin/: yolox_trt_plugin.hpp
yolox_trt_plugin/src/: yolox_trt_plugin.cpp
